Fix content stretch

--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -69,7 +69,7 @@ row {
     &[content="center"] {
         align-content: center;
     }
-    &[content="center"] {
+    &[content="stretch"] {
         align-content: stretch;
     }
     &[content="between"] {
