--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -54,7 +54,7 @@ navmenu {
     &[content="center"] {
         align-content: center;
     }
-    &[content="center"] {
+    &[content="stretch"] {
         align-content: stretch;
     }
     &[content="between"] {
